# hometube

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  run.py  todo.md
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
app/: __init__.py  hometube.py  main.py  utils.py
app/translations/: __init__.py  en.py  fr.py
docs/: README.md  conda-setup.md  deployment.md  development-setup.md  development.md  docker.md  hooks-scripts.md  hooks.md  installation.md  supported-platforms.md  testing.md  usage.md  uv-workflow.md  webhook.md
docs/examples/nginx/: nginx.conf
hooks/: on_failure.sh  on_start.sh  on_success.sh
requirements/: requirements-dev.txt  requirements.txt
scripts/: README.md  check_tests.py  update-requirements.sh
tests/: __init__.py  conftest.py  test_core_functions.py  test_translations.py  test_utils.py
